--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -13,12 +13,14 @@ Stylesheet: Main Stylesheet
 
 
 h1, h2, h3, h4, h5, h6 {margin-bottom: $header-margin-bottom;
-    &:not(:first-child) {margin-top: 1.6666em;}
+    &:not(:first-child) {margin-top: 1.3333em;
+        @include breakpoint(medium) {margin-top: 1.6666em;}
+    }
 }
 
 
 h1, h2 {
-    + h5, + h6 {margin-top: -0.6em;}
+    + h5:not(:first-child), + h6:not(:first-child) {margin-top: -0.6em;}
 }
 
 h2 {font-weight: 500;}
